# CPPServer

./: .dockerignore  .gitignore  Dockerfile  Guide.txt  README.md  Test  bash_st_test  build_isb.sh  st_test  tws22.sh
2024_8_SPX/12_SPX/: 5355_C_Ticks.csv
2024_8_SPX/13_SPX/: 5420_C_Ticks.csv
Executables/: TwsData_test  TwsStrategyCppServer  httpsServer  option_scanner_test
IntradayStrategyBuilder/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp  messages.proto  start_isb_server.sh
IntradayStrategyBuilder/database/: CMakeLists.txt
IntradayStrategyBuilder/database/include/: SaveToCSV.h
IntradayStrategyBuilder/database/src/: SaveToCSV.cpp
IntradayStrategyBuilder/http_server/: CMakeLists.txt  http_server_test.cpp  main.cpp
IntradayStrategyBuilder/http_server/include/: CacheSever.h  SocketDataCollector.h  WebSocket.h
IntradayStrategyBuilder/http_server/src/: CacheSever.cpp  SocketDataCollector.cpp  WebSocket.cpp
IntradayStrategyBuilder/option_scanner/: CMakeLists.txt  build_option_scanner.sh  option_scanner_test.cpp  run_option_scanner.sh
IntradayStrategyBuilder/option_scanner/include/: Candle.h  CandleTags.h  ContractData.h  DBReadyCandle.h  OptionEnums.h  OptionScanner.h  OptionStatisticTrackers.h  ScannerNotificationHandler.h  TwsEventHandler.h  TwsWrapper.h  UnderlyingData.h
IntradayStrategyBuilder/option_scanner/src/: Candle.cpp  ContractData.cpp  DBReadyCandle.cpp  OptionEnums.cpp  OptionScanner.cpp  ScannerNotificationHandler.cpp  TwsEventHandler.cpp  TwsWrapper.cpp  UnderlyingData.cpp
IntradayStrategyBuilder/tws_data_handler/: CMakeLists.txt  README.md  tws_data_test.cpp
IntradayStrategyBuilder/tws_data_handler/include/: Candle.h  ContractDefs.h  SampleDataSubscriber.h  TwsApiDefs.h  TwsEventHandler.h  TwsWrapper.h
IntradayStrategyBuilder/tws_data_handler/src/: Candle.cpp  ContractDefs.cpp  TwsEventHandler.cpp  TwsWrapper.cpp
SavedData/2024_8_SPX/12_SPX/: 5385_C_Ticks.csv
SavedData/2024_8_SPX/13_SPX/: 5420_C_Five_Sec.csv  5420_C_One_Min.csv
SavedData/2024_8_SPX/26_SPX/: 5235_C_Five_Sec.csv  5235_C_One_Min.csv
SavedData/2024_8_SPX/30_SPX/: SPX_Daily_Data.csv  SPX_News_Data.csv
SavedData/2024_9_SPX/2_SPX/: 5645_C_Ticks.csv  SPX_One_Min.csv
test_scripts/: tws22.sh
